--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
           <h2 class="visually-hidden">Section 2</h2>
           <ul class="list">
             <li class="list_item">
+              <div class="list_item_img">
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="baslik_uc">Strategy</h3>
               <p class="baslik_ucp">
                 Our goal is to identify the business problem to walk away with
@@ -77,6 +82,11 @@
               </p>
             </li>
             <li class="list_item">
+              <div class="list_item_img">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="baslik_uc">Punctuality</h3>
               <p class="baslik_ucp">
                 Bring the key message to the brand's audience for the best price
@@ -84,6 +94,11 @@
               </p>
             </li>
             <li class="list_item">
+              <div class="list_item_img">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="baslik_uc">Diligence</h3>
               <p class="baslik_ucp">
                 Research and confirm brands with the strongest digital growth
@@ -91,6 +106,11 @@
               </p>
             </li>
             <li class="list_item">
+              <div class="list_item_img">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#astronut"></use>
+                </svg>
+              </div>
               <h3 class="baslik_uc">Technologies</h3>
               <p class="baslik_ucp">
                 Design practice focused on digital experiences. We bring forth a
