--- a/index.html
+++ b/index.html
@@ -134,6 +134,35 @@
               <div class="team_div">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="namep">Product Designer</p>
+                <ul class="social">
+                  <li class="social_li">
+                    <a href="#" class="social_link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social_li">
+                    <a href="#" class="social_link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social_li">
+                    <a href="#" class="social_link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social_li">
+                    <a href="#" class="social_link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
               </div>
             </li>
             <li class="team">
@@ -146,6 +175,35 @@
               <div class="team_div">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="namep">Frontend Developer</p>
+                <ul class="social">
+                  <li class="social_li">
+                    <a href="#" class="social_link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social_li">
+                    <a href="#" class="social_link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social_li">
+                    <a href="#" class="social_link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social_li">
+                    <a href="#" class="social_link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
               </div>
             </li>
 
@@ -159,6 +217,35 @@
               <div class="team_div">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="namep">Marketing</p>
+                <ul class="social">
+                  <li class="social_li">
+                    <a href="#" class="social_link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social_li">
+                    <a href="#" class="social_link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social_li">
+                    <a href="#" class="social_link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social_li">
+                    <a href="#" class="social_link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
               </div>
             </li>
 
@@ -172,6 +259,35 @@
               <div class="team_div">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="namep">UI Designer</p>
+                <ul class="social">
+                  <li class="social_li">
+                    <a href="#" class="social_link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social_li">
+                    <a href="#" class="social_link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social_li">
+                    <a href="#" class="social_link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social_li">
+                    <a href="#" class="social_link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
               </div>
             </li>
           </ul>
