--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <ul class="social">
                   <li class="social_li">
                     <a href="#" class="social_link">
-                      <svg width="16" height="16">
+                      <svg class="team_svg" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
@@ -151,7 +151,7 @@
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
-                      <svg width="16" height="16">
+                      <svg class="team_svg"  width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
@@ -163,6 +163,7 @@
                       </svg>
                     </a>
                   </li>
+                </ul>
               </div>
             </li>
             <li class="team">
@@ -178,7 +179,7 @@
                 <ul class="social">
                   <li class="social_li">
                     <a href="#" class="social_link">
-                      <svg width="16" height="16">
+                      <svg class="team_svg" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
@@ -192,7 +193,7 @@
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
-                      <svg width="16" height="16">
+                      <svg class="team_svg"  width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
@@ -204,6 +205,7 @@
                       </svg>
                     </a>
                   </li>
+                </ul>
               </div>
             </li>
 
@@ -220,7 +222,7 @@
                 <ul class="social">
                   <li class="social_li">
                     <a href="#" class="social_link">
-                      <svg width="16" height="16">
+                      <svg class="team_svg"  width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
@@ -246,6 +248,7 @@
                       </svg>
                     </a>
                   </li>
+                </ul>
               </div>
             </li>
 
@@ -262,7 +265,7 @@
                 <ul class="social">
                   <li class="social_li">
                     <a href="#" class="social_link">
-                      <svg width="16" height="16">
+                      <svg class="team_svg" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
@@ -288,6 +291,7 @@
                       </svg>
                     </a>
                   </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -297,8 +301,12 @@
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-ul">
-            <li class="portfolio-li">
+              <li class="portfolio-li">
+              <div class="portfolio-img">
               <img src="./images/app.jpg" height="300" width="360" alt="Man in a white t-shirt - Daniel" />
+              <p class="port-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic
+                fruit ecommerce app . cloud storage app</p>
+            </div>
               <div class="portfolio-text-container">
                 <h3 class="portfolio-small-title">Banking App</h3>
                 <p class="portfolio-p">App</p>
