--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
-                      <svg width="16" height="16">
+                      <svg class="team_svg" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
-                      <svg class="team_svg"  width="16" height="16">
+                      <svg class="team_svg" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
@@ -316,9 +316,8 @@
             <li class="portfolio-li">
               <div class="portfolio-img">
               <img src="./images/pay.jpg" height="300" width="360" alt="Man in a white t-shirt - Daniel" />
-              <p class="port-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic
-                fruit ecommerce app ·
-                cloud storage app</p>
+              <p class="port-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app ·
+              cloud storage app</p>
               </div>
               <div class="portfolio-text-container">
                 <h3 class="portfolio-small-title">Cashless Payment</h3>
@@ -329,9 +328,8 @@
             <li class="portfolio-li">
               <div class="portfolio-img">
               <img src="./images/pcapp.jpg" height="300" width="360" alt="Man in a white t-shirt - Daniel" />
-              <p class="port-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic
-                fruit ecommerce app ·
-                cloud storage app</p>
+              <p class="port-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app ·
+              cloud storage app</p>
               </div>
               <div class="portfolio-text-container">
                 <h3 class="portfolio-small-title">Meditation App</h3>
@@ -342,9 +340,8 @@
             <li class="portfolio-li">
               <div class="portfolio-img">
               <img src="./images/taxi.jpg" height="300" width="360" alt="Man in a white t-shirt - Daniel" />
-              <p class="port-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic
-                fruit ecommerce app ·
-                cloud storage app</p>
+              <p class="port-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app ·
+              cloud storage app</p>
               </div>
               <div class="portfolio-text-container">
                 <h3 class="portfolio-small-title">Taxi Service</h3>
@@ -355,9 +352,8 @@
             <li class="portfolio-li">
               <div class="portfolio-img">
               <img src="./images/screen.jpg" height="300" width="360" alt="Man in a white t-shirt - Daniel" />
-              <p class="port-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic
-                fruit ecommerce app ·
-                cloud storage app</p>
+              <p class="port-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app ·
+              cloud storage app</p>
               </div>
               <div class="portfolio-text-container">
                 <h3 class="portfolio-small-title">Screen Illustrations</h3>
@@ -368,9 +364,8 @@
             <li class="portfolio-li">
               <div class="portfolio-img">
               <img src="./images/online.jpg" height="300" width="360" alt="Man in a white t-shirt - Daniel" />
-              <p class="port-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic
-                fruit ecommerce app ·
-                cloud storage app</p>
+              <p class="port-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app ·
+              cloud storage app</p>
               </div>
               <div class="portfolio-text-container">
                 <h3 class="portfolio-small-title">Online Courses</h3>
