--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
-                      <svg width="16" height="16">
+                    <svg class="team_svg" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -229,14 +229,14 @@
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
-                      <svg width="16" height="16">
+                      <svg class="team_svg" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
-                      <svg width="16" height="16">
+                      <svg class="team_svg" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
