--- a/index.html
+++ b/index.html
@@ -387,6 +387,38 @@
           digital marketing & growth solutions.
         </p>
       </div>
+      <div class="fot-sosyal">
+        <p class="fot-spsyal-p">Social media</p>
+        <ul class="fot-sosyal-ul">
+          <li class="fot-sosyal-li">
+            <a href="#" class="fot-sosyal-link">
+              <svg class="fot-sosyal-svg" width="24" height="24">
+                <use href="./images/icons.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="fot-sosyal-li">
+            <a href="#" class="fot-sosyal-link">
+              <svg class="fot-sosyal-svg" width="24" height="24">
+                <use href="./images/icons.svg#twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="fot-sosyal-li">
+            <a href="#" class="fot-sosyal-link">
+              <svg class="fot-sosyal-svg" width="24" height="24">
+                <use href="./images/icons.svg#instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="fot-sosyal-li">
+            <a href="#" class="fot-sosyal-link">
+              <svg class="fot-sosyal-svg" width="24" height="24">
+                <use href="./images/icons.svg#linkedin"></use>
+              </svg>
+            </a>
+          </li>
+      </div>
     </footer>
   </body>
 </html>
