--- a/index.html
+++ b/index.html
@@ -379,9 +379,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="footer_logo"
-          >Web<span class="footer_logo-second">Studio</span></a
-        >
+        <a href="./index.html" class="footer_logo">Web<span class="footer_logo-second">Studio</span></a>
         <p class="footer_text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
@@ -418,6 +416,7 @@
               </svg>
             </a>
           </li>
+        </ul>
       </div>
     </footer>
   </body>
