--- a/index.html
+++ b/index.html
@@ -304,8 +304,7 @@
               <li class="portfolio-li">
               <div class="portfolio-img">
               <img src="./images/app.jpg" height="300" width="360" alt="Man in a white t-shirt - Daniel" />
-              <p class="port-p">'14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app
-              · cloud storage app'</p>
+              <p class="port-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
             </div>
               <div class="portfolio-text-container">
                 <h3 class="portfolio-small-title">Banking App</h3>
@@ -316,8 +315,7 @@
             <li class="portfolio-li">
               <div class="portfolio-img">
               <img src="./images/pay.jpg" height="300" width="360" alt="Man in a white t-shirt - Daniel" />
-              <p class="port-p">'14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app
-              · cloud storage app'</p>
+              <p class="port-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="portfolio-text-container">
                 <h3 class="portfolio-small-title">Cashless Payment</h3>
@@ -328,8 +326,7 @@
             <li class="portfolio-li">
               <div class="portfolio-img">
               <img src="./images/pcapp.jpg" height="300" width="360" alt="Man in a white t-shirt - Daniel" />
-              <p class="port-p">'14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app
-              · cloud storage app'</p>
+              <p class="port-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="portfolio-text-container">
                 <h3 class="portfolio-small-title">Meditation App</h3>
@@ -340,8 +337,7 @@
             <li class="portfolio-li">
               <div class="portfolio-img">
               <img src="./images/taxi.jpg" height="300" width="360" alt="Man in a white t-shirt - Daniel" />
-              <p class="port-p">'14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app
-              · cloud storage app'</p>
+              <p class="port-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="portfolio-text-container">
                 <h3 class="portfolio-small-title">Taxi Service</h3>
@@ -352,8 +348,8 @@
             <li class="portfolio-li">
               <div class="portfolio-img">
               <img src="./images/screen.jpg" height="300" width="360" alt="Man in a white t-shirt - Daniel" />
-              <p class="port-p">'14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app
-              · cloud storage app'</p>
+              <p class="port-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+              Cloud Storage App</p>
               </div>
               <div class="portfolio-text-container">
                 <h3 class="portfolio-small-title">Screen Illustrations</h3>
@@ -364,8 +360,7 @@
             <li class="portfolio-li">
               <div class="portfolio-img">
               <img src="./images/online.jpg" height="300" width="360" alt="Man in a white t-shirt - Daniel" />
-              <p class="port-p">'14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app
-              · cloud storage app'</p>
+              <p class="port-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="portfolio-text-container">
                 <h3 class="portfolio-small-title">Online Courses</h3>
