--- a/index.html
+++ b/index.html
@@ -373,13 +373,12 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container-fot">
-        <a href="./index.html" class="footer_logo">Web<span class="footer_logo-second">Studio</span></a>
-        <p class="footer_text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
+      <div class="container">
+        <div class="footer-div">
+             <a href="./index.html" class="footer_logo">Web<span class="footer_logo-second">Studio</span></a>
+             <p class="footer_text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
+      
       <div class="fot-sosyal">
         <p class="fot-spsyal-p">Social media</p>
         <ul class="fot-sosyal-ul">
@@ -412,6 +411,7 @@
             </a>
           </li>
         </ul>
+      </div>
       </div>
     </footer>
   </body>
