--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container-fot">
         <div class="footer-div">
              <a href="./index.html" class="footer_logo">Web<span class="footer_logo-second">Studio</span></a>
              <p class="footer_text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
