--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <li class="list_item">
               <div class="list_item_img">
               <svg width="64" height="64">
-                <use href="./images/icons.svg#antenna"></use>
+                <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="baslik_uc">Strategy</h3>
@@ -266,7 +266,7 @@
                   <li class="social_li">
                     <a href="#" class="social_link">
                       <svg class="team_svg" width="16" height="16">
-                        <use href="./images/icons.svg#facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
