--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <li class="list_item">
               <div class="list_item_img">
               <svg width="64" height="64">
-                <use href="./images/icons.svg#icon-antenna"></use>
+                <use href="./images/icons.svg#antenna"></use>
                 </svg>
               </div>
               <h3 class="baslik_uc">Strategy</h3>
@@ -186,21 +186,21 @@
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
-                      <svg width="16" height="16">
+                      <svg class="team_svg" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
-                      <svg class="team_svg"  width="16" height="16">
+                      <svg class="team_svg" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
-                      <svg width="16" height="16">
+                    <svg class="team_svg" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -243,7 +243,7 @@
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
-                      <svg width="16" height="16">
+                    <svg class="team_svg" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -286,7 +286,7 @@
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
-                      <svg width="16" height="16">
+                      <svg class="team_svg" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
