--- a/index.html
+++ b/index.html
@@ -385,14 +385,14 @@
           <li class="fot-sosyal-li">
             <a href="#" class="fot-sosyal-link">
               <svg class="fot-sosyal-svg" width="24" height="24">
-                <use href="./images/icons.svg#facebook"></use>
+                <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="fot-sosyal-li">
             <a href="#" class="fot-sosyal-link">
               <svg class="fot-sosyal-svg" width="24" height="24">
-                <use href="./images/icons.svg#twitter"></use>
+                <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
