--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
           <li class="fot-sosyal-li">
             <a href="#" class="fot-sosyal-link">
               <svg class="fot-sosyal-svg" width="24" height="24">
-                <use href="./images/icons.svg#linkedin"></use>
+                <use href="./images/icons.svg#icon-linkedin">
               </svg>
             </a>
           </li>
