--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <li class="list_item">
               <div class="list_item_img">
               <svg width="64" height="64">
-                <use href="./images/icons.svg#antenna"></use>
+                <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="baslik_uc">Strategy</h3>
@@ -84,7 +84,7 @@
             <li class="list_item">
               <div class="list_item_img">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg#clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="baslik_uc">Punctuality</h3>
@@ -96,7 +96,7 @@
             <li class="list_item">
               <div class="list_item_img">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg#diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="baslik_uc">Diligence</h3>
@@ -108,7 +108,7 @@
             <li class="list_item">
               <div class="list_item_img">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg#astronut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="baslik_uc">Technologies</h3>
@@ -138,28 +138,28 @@
                   <li class="social_li">
                     <a href="#" class="social_link">
                       <svg class="team_svg" width="16" height="16">
-                        <use href="./images/icons.svg#facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
                       <svg class="team_svg" width="16" height="16">
-                        <use href="./images/icons.svg#twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
                       <svg class="team_svg" width="16" height="16">
-                        <use href="./images/icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
                     <svg class="team_svg" width="16" height="16">
-                        <use href="./images/icons.svg#linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -180,28 +180,28 @@
                   <li class="social_li">
                     <a href="#" class="social_link">
                       <svg class="team_svg" width="16" height="16">
-                        <use href="./images/icons.svg#facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
                       <svg class="team_svg" width="16" height="16">
-                        <use href="./images/icons.svg#twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
                       <svg class="team_svg" width="16" height="16">
-                        <use href="./images/icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
                     <svg class="team_svg" width="16" height="16">
-                        <use href="./images/icons.svg#linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -223,28 +223,28 @@
                   <li class="social_li">
                     <a href="#" class="social_link">
                       <svg class="team_svg"  width="16" height="16">
-                        <use href="./images/icons.svg#facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
                       <svg class="team_svg" width="16" height="16">
-                        <use href="./images/icons.svg#twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
                       <svg class="team_svg" width="16" height="16">
-                        <use href="./images/icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
                     <svg class="team_svg" width="16" height="16">
-                        <use href="./images/icons.svg#linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -273,21 +273,21 @@
                   <li class="social_li">
                     <a href="#" class="social_link">
                       <svg class="team_svg" width="16" height="16">
-                        <use href="./images/icons.svg#twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
                       <svg class="team_svg" width="16" height="16">
-                        <use href="./images/icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social_li">
                     <a href="#" class="social_link">
                       <svg class="team_svg" width="16" height="16">
-                        <use href="./images/icons.svg#linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -385,8 +385,7 @@
             <li class="footer-item-icon">
               <a href="" class="footer-link-icon">
                 <svg class="iconka" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram">
-                  </use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -394,8 +393,7 @@
             <li class="footer-item-icon">
               <a href="" class="footer-link-icon">
                 <svg class="iconka" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter">
-                  </use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -403,8 +401,7 @@
             <li class="footer-item-icon">
               <a href="" class="footer-link-icon">
                 <svg class="iconka" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook">
-                  </use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -412,8 +409,7 @@
             <li class="footer-item-icon">
               <a href="" class="footer-link-icon">
                 <svg class="iconka" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin">
-                  </use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
